修复部分bug
